@@ -184,6 +184,19 @@
 </tr>
 </table>
 
+<h4>Add requestBody field and associated schema</h4>
+<table class="tchange">
+<tr class="trchange">
+	<td class="tdfield">new fields</td>
+	<td class="tdchange" colspan=2>
+		<ul>
+			<li>.components.schemas."dbv0.0.38_update_users"</li>
+			<li>.paths."/users/".post.requestBody'</li>
+		</ul>
+	</td>
+</tr>
+</table>
+
 <h3>openapi/v0.0.38 (src/plugins/openapi/v0.0.38/openapi.json)</h3>
 
 <h4>add plugin</h4>
